--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="assets/css/app.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/vendor/fontawesome/css/all.min.css">
+    <style>
+        .video-section{
+    background: linear-gradient(0deg, #60fb7780, #60fb773b), url('./assets/image/Container.jpg');
+}
+    </style>
 </head>
 
 <body>
