--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/vendor/fontawesome/css/all.min.css">
     <style>
         .video-section{
-    background: linear-gradient(0deg, #60fb7780, #60fb773b), url('./assets/image/Container.jpg');
+    background: linear-gradient(0deg, #60fb7780, #60fb773b), url('/assets/image/Container.jpg');
 }
     </style>
 </head>
