--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <!-- logo section -->
 
         <!-- video section -->
-        <div class="video-section">
+        <div class="video-section" style="background-image: URL("/assets/image/Container.jpg")>
             <div class="play-vid-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5">
                     <path
