--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
     <link rel="stylesheet" href="assets/css/app.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/vendor/fontawesome/css/all.min.css">
-    <style>
-        .video-section{
-    background: linear-gradient(0deg, #60fb7780, #60fb773b), url('/assets/image/Container.jpg');
-}
-    </style>
 </head>
 
 <body>
@@ -165,7 +160,7 @@
         <!-- logo section -->
 
         <!-- video section -->
-        <div class="video-section" style="background-image: URL('/assets/image/Container.jpg');">
+        <div class="video-section">
             <div class="play-vid-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5">
                     <path
