--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="sidebar-header">
             <a href="index.html">
                 <div class="sidebar-logo">
-                    <img src="/assets/image/ipoint logo 2.png" alt="">
+                    <img src="./assets/image/ipoint logo 2.png" alt="">
                 </div>
             </a>
             <div class="close-sidebar">
